# nc

./: .gitignore  CMakeLists.txt  NOTES.md  Nucledian.sln  Nuclidean_Source_Code.srctrldb  Nuclidean_Source_Code.srctrlprj  README.md  config.tres  generate_project_files.bat  icon.svg.import  level_test1.json  nuclidean.sln  plot_raycast_profiling.py  post_mff_plans.md  project.godot  sector2.txt  sector2_rects.txt  sector2_rects_ids.txt  sector2_rects_ids2.txt  settings.cfg  shader_rework_plan.md  shader_rework_prompt.md  visualize.py  visualize_rect_megatex.py  visualize_sector_megatex.py
.claude/: settings.local.json
.github/workflows/: build.yml
Nucledian/: Nucledian.vcxproj  Nucledian.vcxproj.filters  main.cpp
addons/ncedit/: ncedit.gd  ncedit.gd.uid  plugin.cfg
art/: ambient.mscz  ambient2.mscz
art/sounds/: README.txt
content/data/: bruh.enemy.json  hah.enemy_big.json
content/levels/: cornell_box.json  debug_level.json  level_final1.json  level_final2.json  level_final3.json  level_test1.json  level_test2.json  matus_debug.json  testLevel2.json
content/shaders/: billboard.frag  billboard.vert  editor_lines.frag  editor_lines.vert  gun.vert  light.frag  pixel_denoise.frag  pixel_denoise.vert  pixel_gi.frag  pixel_light.frag  pixel_light.vert  sector.frag  sector.vert  sky_box.frag  sky_box.vert  solid.frag
content/sound/: README.txt
demo/: level_final1_03_20_14_04_03_2026.ncd  level_final1_17_25_16_28_02_2026.ncd  level_final1_26_35_12_04_03_2026.ncd  level_final1_28_29_12_28_02_2026.ncd  level_final1_34_11_10_04_03_2026.ncd  level_final1_51_42_14_04_03_2026.ncd  level_final1_58_11_15_04_03_2026.ncd  level_final2_14_53_16_28_02_2026.ncd  level_final2_32_38_12_04_03_2026.ncd  level_final3_24_39_13_04_03_2026.ncd  level_final3_31_13_22_28_02_2026.ncd  level_final3_51_47_12_04_03_2026.ncd  presentation_demo.ncd
imgs/: CCOMP02.png.import  Dirt.png.import  Dirt2.png.import  Vegetation.png.import  VegetationDark.png.import  VegetationDark2.png.import  bricks.png.import  bricks_1.png.import  bricks_2.png.import  bulb_on.svg.import  button_off_bricks_1.png.import  button_off_bricks_2.png.import  button_off_wall_1.png.import  button_off_wall_2.png.import  button_on_bricks_1.png.import  button_on_bricks_2.png.import  button_on_wall_1.png.import  button_on_wall_2.png.import  button_tech_off.png.import  button_tech_on.png.import  cloud.png.import  cultist_face.png.import  doors_left.png.import  doors_middle.png.import  doors_right.png.import  floor1.png.import  floor2.png.import  floor3.png.import  grunt.png.import  holes.png.import  hp_big.png.import  hp_small.png.import  johnny_automatic_sun_woodcut.svg.import  key_icon.png.import  meat_wall.png.import  meat_wall_2.png.import  meat_wall_3.png.import  meat_wall_4.png.import  mff_pepe.png.import  moss.png.import  (+20 more)
imgs/pickups/: plasma_ammo.png.import  plasma_rifle.png.import  shotgun.png.import  shotgun_ammo.png.import
imgs/props/: bush_1.png.import  bush_2.png.import  bush_3.png.import  bush_4.png.import  candle_1.png.import  candle_2.png.import  candle_3.png.import  candle_4.png.import  candle_5.png.import  candle_6.png.import  candle_cluster_1.png.import  candle_cluster_2.png.import  candle_cluster_3.png.import  candle_cluster_4.png.import  candle_cluster_5.png.import  cup_1.png.import  (+12 more)
levels/: debug_level.tscn  finalLevel1.tscn  finalLevel2.tscn  finalLevel3.tscn  finalLevel3_1.tscn  ga_level_1.tscn  newLevel2.tscn  testLevel1.tscn  testLevel1_1.tscn  testLevel2.tscn  testLevel3.tscn  texturing_test1.tscn
manual/: user_manual.docx
material_textures/: Bricks.tres  BricksRotated.tres  Bricks_1.tres  Bricks_2.tres  Button1.tres  CC.tres  Dirt.tres  Floor1.tres  Floor2.tres  Floor3.tres  Vegetation.tres  Wall.tres  Wall2.tres  Wall3.tres  Wall4.tres  Wall5.tres  Wall6.tres  Wall7.tres  Wall_2.tres  _None.tres  _UseOpposite.tres  alien_floor.tres  button_magic.tres  button_off_bricks_1.tres  button_off_bricks_2.tres  button_off_wall_1.tres  button_off_wall_2.tres  button_on_bricks_1.tres  button_on_bricks_2.tres  button_on_wall_1.tres  button_on_wall_2.tres  button_tech_off.tres  doors_left.tres  doors_middle.tres  doors_right.tres  holes.tres  meat_wall.tres  meat_wall_2.tres  meat_wall_3.tres  meat_wall_4.tres  (+17 more)
materials/: big_room.tres  cave_texture.tres  default_texture.tres  doors.tres  layered_test.tres  maintenance_shaft.tres  ornament1.tres  outsides.tres  outsides_edge.tres  outsides_hill.tres  outsides_house.tres  outsides_road.tres  outsides_road_house.tres  outsides_wall.tres  parkour_pillar.tres  parkour_pillar_2.tres
prefabs/: Level.tscn  PlayerPosition.tscn  Sector.tscn  SectorPoint.tscn  StairMaker.tscn  TriangulatedMultisector.tscn
projects/: SDL.vcxproj  SDL_mixer.vcxproj  SDLmain.vcxproj  benchmark.vcxproj  entity.natvis  imgui.ini  map_info.h  material.h  nc.natvis  nucledian.rc  nucledian.vcxproj  nucledian.vcxproj.filters  nucledian.vcxproj.filters.orig  nucledian.vcxproj.orig  nuclidean.vcxproj  nuclidean.vcxproj.filters  player.cpp  player.h  resource.h
save/: empty_level_27_05_2026.ncs  level_final1_19_48_21_24_05_2026.ncs  level_final1_19_48_33_24_05_2026.ncs  level_final1_19_51_29_24_05_2026.ncs  level_final1_19_55_09_24_05_2026.ncs  level_final1_19_58_53_24_05_2026.ncs  level_final2-autosave--_19_06_2026.ncs  level_final2_19_33_48_24_05_2026.ncs  save1..ncs  save1.ncs  save2..ncs  save2.ncs  save3..ncs  save4.ncs  save5.ncs  save6.ncs  save7.ncs  save8.ncs  save9.ncs
scripts/: EditorConfig.gd  EditorConfig.gd.uid  HoleSector.gd.uid  Level.gd  Level.gd.uid  PlayerPosition.gd  Sector.gd  Sector.gd.uid  SectorPoint.gd  SectorPoint.gd.uid  TriangulatedMultisector.gd.uid  clockwise_test.gd  clockwise_test.gd.uid  test.gd  test.gd.uid
sector2_files/: a.htm
source/: README.md
source/libs/SDL_mixer/: CMakeLists.txt
source/libs/SDL_mixer/include/: SDL_mixer.h
source/libs/SDL_mixer/src/: mixer.c
source/libs/benchmark/: CMakeLists.txt
textures/: default_texture.tres  hp_big.png.import  hp_small.png.import  mff_pepe.png.import  ornament1.tres  outsides.tres
(+839 files in other folders)
